--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,38 @@
-*{
-    padding:0;
-    margin:0;
+* {
+    padding: 0;
+    margin: 0;
     list-style-type: none;
     border-style: none;
 }
 
+.container {
+    width: 100%;
+    height: 100vh;
+    background-image: url(./Assets/background-home.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.header {
+    width: 100%;
+}
+
+.header-buttons {
+    padding: 10px 10px 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 15px;
+}
+
+.header-buttons button {
+
+    background-color: #24765F;
+    color: #ffffff;
+    border: 1px solid #24765F;
+    font-weight: bold;
+    min-width: 95px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
