--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,6 @@
 /*
 
-    Esses estilos globais e estão sendo importados a partir de src/index.js
+    Esses estilos são globais e estão sendo importados a partir de src/index.js
     Todos estilos definidos aqui podem ser chamados por nome em qualquer componente do projeto,
     sem a necessidade de importar nada nem usar notação de objeto.
 
