--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -19,3 +19,21 @@
         <div className={styles.container}> Estilos locais estão sendo aplicados aqui.. </div>
 
 */
+
+
+.container {
+    width: 100%;
+    height: 100vh;
+    background-image: url(./../../Assets/background-home3.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.header {
+    width: 100%;
+}
+
+
+/* 
+    useful colors: #15392D | #91D847 and #FFD664
+*/
