--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 .container {
     width: 100%;
     height: 100vh;
-    background-image: url(./Assets/background-home.jpg);
+    background-image: url(./Assets/background.jpg);
     background-repeat: no-repeat;
     background-position: center center;
 }
