--- a/src/App.css
+++ b/src/App.css
@@ -3,36 +3,83 @@
     margin: 0;
     list-style-type: none;
     border-style: none;
+    text-decoration: none;
 }
 
 .container {
     width: 100%;
     height: 100vh;
     background-image: url(./Assets/background.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
+    clip-path: polygon(43% 0, 100% 0, 100% 100%, 27% 100%);
+
 }
 
-.header {
+.container2 {
+    background-color: #ffffff;
+}
+
+.absoluta{
+    position: absolute;
+}
+
+.text h1,
+h2 {
+    top: 160px;
+    left: 20px;
+    display: flex;
+    text-align: left;
+    margin-left: 3%;
+    position: relative;
+    text-align: left;
+    
+}
+
+.text h1{
+    color: #1D4D16;
+    font-size: 56px;
+    
+}
+.text h2 {
+    color: #000000;
+    font-size: 36px;
+}
+
+.link{
+    color: #ffffff;
+    font-size: 36;
+}
+ .header {
     width: 100%;
-}
+    height: 100%;
+} 
 
-.header-buttons {
-    padding: 10px 10px 0 0;
+ .header-buttons {
+    
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    gap: 15px;
-}
+    gap: 12px;
+    font-size: 36;
+} 
 
 .header-buttons button {
 
-    background-color: #24765F;
+    background-color: #1D4D16;
     color: #ffffff;
-    border: 1px solid #24765F;
+    border: 1px solid #1D4D16;
     font-weight: bold;
-    min-width: 95px;
     padding: 8px 16px;
     border-radius: 4px;
     cursor: pointer;
+    float: left;
+    margin-left: 3%;
+    position: relative;
+    top: 210px;
+    left: 20px;
+
 }
+
+@media only screen and (max-width: 330px) {
+    div {
+        width: 250px;
+    }
+} 
