--- a/src/pages/SignUp/index1.css
+++ b/src/pages/SignUp/index1.css
@@ -1,29 +1,23 @@
-*{ /*formatacao geral*/
-    margin: 0;
-    padding: 0;   
-    box-sizing: border-box;
-}
-
-
-.login {
+.SignUp {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     width: 100%;
-    background-image: url(../../Assets/teste1.jpg);
+    /* background-image: url(../../Assets/teste1.jpg); */
+    background-color: #121214;
     color: white;
     margin-bottom: 20px;
 }
 
-.login-logo img {
+.SignUp-logo img {
     width: 434px;
     height: 432px;
     clip-path: polygon(26% 0, 100% 0, 100% 100%, 0% 120%);
 }
 
 
-.login-right img {
+.SignUp-right img {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
     margin-bottom: 20px;
@@ -39,9 +33,9 @@
 }
 
 
-.login-right {
+.SignUp-right {
     background-color: #ffffff;
-    border-radius: 5px;
+    border-radius: 2px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,7 +48,7 @@
 
 }
 
-.login-right h1 {
+.SignUp-right h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
     margin-bottom: 20px;
@@ -64,7 +58,7 @@
     margin-bottom: 35px;
 }
 
-.login-right h4 {
+.SignUp-right h4 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 300;
     margin-top: 20px;
@@ -74,7 +68,7 @@
     text-align: left;
 }
 
-.login-loginInputEmail {
+.SignUp-SignUpInputEmail {
     display: flex;
     align-items: center;
     color: #1D4D16;
@@ -86,17 +80,18 @@
     width: 88%;
     height: 50px;
     margin-bottom: 3%;
+    border-width: medium;
 
 
 }
 
-.login-loginInputEmail svg {
+.SignUp-SignUpInputEmail svg {
     margin-left: 10px;
     font-size: 25px;
 
 }
 
-.login-loginInputEmail input {
+.SignUp-SignUpInputEmail input {
     background: transparent;
     width: 100%;
     outline-width: 0;
@@ -105,10 +100,11 @@
     font-size: 17px;
     margin-left: 10px;
     margin-right: 10px;
+      border-width: medium;
 }
 
 
-.login-loginInputPassword {
+.SignUp-SignUpInputPassword {
     display: flex;
     align-items: center;
     color: #1D4D16;
@@ -116,6 +112,7 @@
     border-radius: 3px;
     border-color: #121214;
     border-style: solid;
+    border-width: medium;
     padding: 3px;
     margin: 5px;
     width: 88%;
@@ -126,12 +123,12 @@
 
 }
 
-.login-loginInputPassword svg {
+.SignUp-SignUpInputPassword svg {
     margin-left: 10px;
     font-size: 25px;
 }
 
-.login-loginInputPassword input {
+.SignUp-SignUpInputPassword input {
     background: transparent;
     width: 100%;
     outline-width: 0;
@@ -142,7 +139,7 @@
     margin-right: 10px;
 }
 
-.login-right button {
+.SignUp-right button {
     width: 88%;
     background-color: #1D4D16;
     color: #EFF2F5;
@@ -156,14 +153,14 @@
     outline-width: 0;
 }
 
-.login-right button:hover {
+.SignUp-right button:hover {
     background-color: #1D5900;
     color: #EFF2F5;
     cursor: pointer;
 
 }
 
-.login-eye {
+.SignUp-eye {
     align-items: center;
     justify-content: center;
     font-size: 30;
