--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   background-repeat: no-repeat;
   object-fit: contain;
   transform: scale(0.99px);
+  filter: invert(0%) sepia(4%) saturate(100%) hue-rotate(0deg) brightness(100%) contrast(80%);
 }
 
 .container2 {
