--- a/src/pages/SignUp/index_cadastro.css
+++ b/src/pages/SignUp/index_cadastro.css
@@ -4,10 +4,13 @@
     justify-content: center;
     height: 100vh;
     width: 100%;
-    /* background-image: url(../../Assets/teste1.jpg); */
+    background-image: url(../../Assets/test2.jpg);
     background-color: #121214;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     color: white;
-    margin-bottom: 20px;
+    overflow:hidden;
+    filter: invert(0%) sepia(4%) saturate(100%) hue-rotate(0deg) brightness(100%) contrast(80%);
 }
 
 .SignUp-logo img {
@@ -74,7 +77,7 @@
     color: #1D4D16;
     background-color: #f9f9f9;
     border-radius: 15px;
-    border-color: #121214;
+    border-color: #1D4D16;
     border-style: solid;
     padding: 3px;
     width: 88%;
@@ -110,7 +113,7 @@
     color: #1D4D16;
     background-color: #f9f9f9;
     border-radius: 3px;
-    border-color: #121214;
+    border-color: #1D4D16;
     border-style: solid;
     border-width: medium;
     padding: 3px;
