--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,28 @@
 }
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&display=swap");
 
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  height: 100px;
+  border-radius: 8px;
+  background: rgb(11, 67, 3);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #57A05C;
+}
+
 .container {
   width: 100%;
   height: 100vh;
