--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  min-height: 100vh;
 }
 
 .homeContainer {
@@ -12,6 +13,11 @@
   width: 100%;
   font-family: "Be Vietnam Pro", sans-serif;
   padding: 15px 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100vh;
 }
 
 header:first-child {
@@ -19,11 +25,10 @@ header:first-child {
 }
 
 main {
+  padding: 0 25px;
+  width: 100%;
   max-width: 100%;
   
 }
 
-main:first-child > :first-child{
-    overflow-x: scroll;
-}
 
