--- a/src/pages/Suporte/styles.module.css
+++ b/src/pages/Suporte/styles.module.css
@@ -16,7 +16,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 100%;
+    width: 120%;
     background-image: url(../../Assets/solo2.jpg);
     background-size: 100% 100%;
     color: white;
@@ -126,6 +126,17 @@
     width: 88%;
     height: 50px;
     margin-bottom: 3%;
+}
+
+.login-loginInputEmail input {
+    background: transparent;
+    width: 100%;
+    outline-width: 0;
+    color: #121214;
+    border: none;
+    font-size: 17px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .login-right button {
