--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -10,14 +10,16 @@
 
 .homeContainer {
   max-width: calc(100% - 98px);
-  width: 100%;
+  width: 150vh;
+  height: 600px;
+  margin-left: 20px;
   font-family: "Be Vietnam Pro", sans-serif;
   padding: 15px 25px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  min-height: 100vh;
+  margin-top: 30px;
 }
 
 header:first-child {
@@ -28,7 +30,48 @@ main {
   padding: 0 25px;
   width: 100%;
   max-width: 100%;
-  
 }
 
+.imagem1 {
+  background-image: url(../../Assets/irriga.jpg);
+  background-size: 100% 100%;
+}
 
+.imagem2 {
+  background-image: url(../../Assets/irrigação.jpg);
+  background-size: 100% 100%;
+}
+
+.contato {
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  width: 300px;
+  height: 300px;
+  margin-bottom: 50px;
+  margin-top: 40px;
+}
+
+.contato h1 {
+  font-family: 'Times New Roman', Times, serif, Helvetica, sans-serif;
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #fff;
+  font-style: normal;
+  font-weight: bold;
+  margin-bottom: 15px;
+  margin-top: -30px;
+}
+
+.contato p {
+  font-family: 'Times New Roman', Times, serif, Helvetica, sans-serif;
+  font-size: 16px;
+  margin-bottom: 5px;
+  color: #fff;
+  font-style: normal;
+  font-weight: 400;
+}
